[SC-19] fix: standardize framework API errors
